2005-08-05  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c: Added support for "<ppd>" tags in the
	  "<drivers>" list of the printer XML files. This is needed
	  to provide ready-made PPDs for arbitrary drivers on the
	  linuxprinting.org site.

2005-08-04  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Fixed bug of multiple "tc=..." items in
	  an /etc/printcap entry of LPRng not being supported.

2005-07-12  Till Kamppeter <till.kamppeter@gmx.net>

	* READNE: Updated links to Adobe PostScript specifications.

2005-05-29  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in, lib/Foomatic/DB.pm: Added support for
	  PPD file names with spaces (Mandriva bug #16172).

2005-05-11  Till Kamppeter <till.kamppeter@gmx.net>

	* README: Corrected character list in "<arg_allowedchars>" in the
	  example string option XML file. Improved instructions for
	  "<arg_allowedchars>".

2005-02-23  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: Fixed bug of old non-Foomatic PPD not
	  overtaken when applying "foomatic-configure" to a queue without
	  specifying a PPD or a printer/driver pair.

	* lib/Foomatic/DB.pm: When modifying PPD defaults for boolean
	  options "0" or "1" was written into the PPD file and not
	  "False" or "True".

2005-01-28  Till Kamppeter <till.kamppeter@gmx.net>

	* makeDefaults.in, foomatic-cleanupdrivers.in: Allow use of an
	  alternative Foomatic database location specifying it with the
	  FOOMATICDB environment variable.

	* Makefile.in: Added foomatic-cleanupdrivers to be installed into 
	  /usr/sbin, fixed "testing-clean" target.

	* foomatic-cleanupdrivers.in: Use default database location from
	  Defaults.pm.

2005-01-22  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixed Tim Waugh's fix. It made an
	  "@@IEEE1284@@" appear in the PPD file when for a printer
	  no autodetection info was supplied. This made CUPS not
	  accepting the PPD.
